tests/valid/ignore_all.php
<?php
// php-checker-ignore

function takesTwo(int $a, int $b): void
{
}

takesTwo(1);

